--- a/articulos/build.gradle
+++ b/articulos/build.gradle
@@ -29,7 +29,7 @@ repositories {
 
 
 ext {
-	springCloudVersion = 'Finchley.BUILD-SNAPSHOT'
+	springCloudVersion = 'Finchley.M6'
 }
 
 dependencies {
