--- a/usuarios/build.gradle
+++ b/usuarios/build.gradle
@@ -20,13 +20,14 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
 	maven { url "https://repo.spring.io/milestone" }
+	maven { url "https://repo.spring.io/snapshot" }
+	mavenCentral()
 }
 
 
 ext {
-	springCloudVersion = 'Finchley.M6'
+	springCloudVersion = 'Finchley.BUILD-SNAPSHOT'
 }
 
 dependencies {
@@ -36,7 +37,7 @@ dependencies {
 //	compile('org.springframework.boot:spring-boot-starter-data-redis-reactive')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.liquibase:liquibase-core')
-//	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
+	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
 //	compile('org.springframework.cloud:spring-cloud-stream')
 //	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
 	compile('org.springframework.kafka:spring-kafka:2.1.3.RELEASE')
@@ -47,7 +48,7 @@ dependencies {
 	testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
 	testCompile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
 	testCompile('org.springframework.cloud:spring-cloud-starter-contract-verifier')
-	testCompile('org.springframework.cloud:spring-cloud-stream-test-support')
+//	testCompile('org.springframework.cloud:spring-cloud-stream-test-support')
 	testRuntime 'com.h2database:h2'
 }
 
