--- a/usuarios/src/main/resources/application.yml
+++ b/usuarios/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         hibernate:
           ddl-auto: create-drop
     kafka:
-        bootstrap-servers: 192.168.1.36:9092
+#        bootstrap-servers: 192.168.1.36:9092
         producer:
             key-serializer: org.apache.kafka.common.serialization.LongSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -18,11 +18,9 @@ spring:
 
     liquibase:
       change-log: classpath:liquibase-changelog.xml
+    cloud:
+      zookeeper:
+        connect-string: 192.168.1.36:2181
 
-
-#management:
-#  health:
-#    kafka:
-#      enabled: false
 
 
