--- a/articulos/build.gradle
+++ b/articulos/build.gradle
@@ -20,34 +20,36 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
 	maven { url "https://repo.spring.io/milestone" }
+	maven { url "https://repo.spring.io/snapshot" }
+	mavenCentral()
 }
 
 
 ext {
-	springCloudVersion = 'Finchley.M6'
+	springCloudVersion = 'Finchley.BUILD-SNAPSHOT'
 }
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-data-redis-reactive')
-	compile('org.springframework.boot:spring-boot-starter-webflux')
+	compile('org.springframework.boot:spring-boot-starter-data-rest')
+//	compile('org.springframework.boot:spring-boot-starter-data-redis-reactive')
+	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.liquibase:liquibase-core')
 	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
-	compile('org.springframework.cloud:spring-cloud-stream')
-	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
-	compile('org.springframework.kafka:spring-kafka')
-	runtime('com.h2database:h2')
+//	compile('org.springframework.cloud:spring-cloud-stream')
+//	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
+	compile('org.springframework.kafka:spring-kafka:2.1.3.RELEASE')
 	runtime('org.postgresql:postgresql')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('io.projectreactor:reactor-test')
+//	testCompile('io.projectreactor:reactor-test')
 	testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
 	testCompile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
 	testCompile('org.springframework.cloud:spring-cloud-starter-contract-verifier')
-	testCompile('org.springframework.cloud:spring-cloud-stream-test-support')
+//	testCompile('org.springframework.cloud:spring-cloud-stream-test-support')
+	testRuntime 'com.h2database:h2'
 }
 
 dependencyManagement {
