Setting version in main build.gradle

--- a/prestamos/build.gradle
+++ b/prestamos/build.gradle
@@ -1,14 +1,6 @@
-buildscript {
-	ext {
-		springBootVersion = '2.0.0.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://repo.spring.io/milestone" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+
+plugins {
+    id 'org.asciidoctor.convert'  apply false
 }
 
 apply plugin: 'java'
@@ -18,16 +10,6 @@ apply plugin: 'io.spring.dependency-management'
 group = 'com.telopresto.service'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-
-repositories {
-	mavenCentral()
-	maven { url "https://repo.spring.io/milestone" }
-}
-
-
-ext {
-	springCloudVersion = 'Finchley.M9'
-}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
