--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -1,15 +1,9 @@
-buildscript {
-	ext {
-		springBootVersion = '2.0.0.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://repo.spring.io/milestone" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+
+plugins {
+    id 'org.asciidoctor.convert'  apply false
 }
+
+
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
@@ -19,18 +13,11 @@ group = 'com.telopresto.service'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
-repositories {
-	mavenCentral()
-	maven { url "https://repo.spring.io/milestone" }
-}
 
 configurations {
 	providedRuntime
 }
 
-ext {
-	springCloudVersion = 'Finchley.M9'
-}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
