--- a/usuarios/build.gradle
+++ b/usuarios/build.gradle
@@ -1,15 +1,8 @@
-buildscript {
-	ext {
-		springBootVersion = '2.0.0.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://repo.spring.io/milestone" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+
+plugins {
+	id 'org.asciidoctor.convert'  apply false
 }
+
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
@@ -18,17 +11,6 @@ apply plugin: 'io.spring.dependency-management'
 group = 'com.telopresto.service'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-
-repositories {
-	maven { url "https://repo.spring.io/milestone" }
-	maven { url "https://repo.spring.io/snapshot" }
-	mavenCentral()
-}
-
-
-ext {
-	springCloudVersion = 'Finchley.M9'
-}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
