--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 apply plugin: 'org.asciidoctor.convert'
 
 ext {
-	springCloudVersion = 'Finchley.RC2'
+	springCloudVersion = 'Finchley.RELEASE'
 }
 
 allprojects {
