--- a/prestamos/build.gradle
+++ b/prestamos/build.gradle
@@ -23,7 +23,8 @@ dependencies {
 	compile('org.springframework.kafka:spring-kafka')
 	runtime('com.h2database:h2')
 	runtime('org.postgresql:postgresql')
-	compileOnly('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok')
+	implementation('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
 	testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
