--- a/usuarios/build.gradle
+++ b/usuarios/build.gradle
@@ -22,9 +22,10 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
 //	compile('org.springframework.cloud:spring-cloud-stream')
 //	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
-	compile('org.springframework.kafka:spring-kafka:2.1.5.RELEASE')
+	compile('org.springframework.kafka:spring-kafka:2.1.8.RELEASE')
 	runtime('org.postgresql:postgresql')
-	compileOnly('org.projectlombok:lombok')
+	implementation('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok') 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 //	testCompile('io.projectreactor:reactor-test')
 	testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
