--- a/listener/build.gradle
+++ b/listener/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-stream')
 	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
 	compile('org.springframework.kafka:spring-kafka')
-	compileOnly('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok')
+	implementation('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
 	testCompile('org.springframework.cloud:spring-cloud-stream-test-support')
