--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.1.RELEASE'
+        springBootVersion = '2.1.4.RELEASE'
     }
     repositories {
         maven { url "https://repo.spring.io/milestone" }
@@ -13,11 +13,21 @@ buildscript {
     }
 }
 
+plugins {
+	id 'io.franzbecker.gradle-lombok' version '2.1'
+}
+
 
 apply plugin: 'org.asciidoctor.convert'
 
 ext {
-	springCloudVersion = 'Greenwich.M3'
+	springCloudVersion = 'Greenwich.RELEASE'
+}
+
+
+lombok {
+	version = '1.18.6'
+	sha256 = ""
 }
 
 allprojects {
