--- a/prestamos/build.gradle
+++ b/prestamos/build.gradle
@@ -8,25 +8,27 @@ group = 'com.telopresto.service'
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-data-redis-reactive')
-	compile('org.springframework.boot:spring-boot-starter-webflux')
-	compile('org.liquibase:liquibase-core')
-	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
-	compile('org.springframework.cloud:spring-cloud-stream')
-	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
-	compile('org.springframework.kafka:spring-kafka')
-	runtime('com.h2database:h2')
-	runtime('org.postgresql:postgresql')
-	annotationProcessor('org.projectlombok:lombok')
+	implementation('org.springframework.boot:spring-boot-starter-actuator')
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springframework.boot:spring-boot-starter-data-redis-reactive')
+	implementation('org.springframework.boot:spring-boot-starter-webflux')
+	implementation('org.liquibase:liquibase-core')
+	implementation('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
+	implementation('org.springframework.cloud:spring-cloud-stream')
+	implementation('org.springframework.cloud:spring-cloud-stream-binder-kafka')
+	implementation('org.springframework.kafka:spring-kafka')
+	implementation('org.springframework.boot:spring-boot-starter-data-neo4j')
+	testRuntimeOnly('com.h2database:h2')
+	runtimeOnly('org.postgresql:postgresql')
 	implementation('org.projectlombok:lombok')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('io.projectreactor:reactor-test')
-	testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
-	testCompile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
-	testCompile('org.springframework.cloud:spring-cloud-starter-contract-verifier')
-	testCompile('org.springframework.cloud:spring-cloud-stream-test-support')
+	annotationProcessor('org.projectlombok:lombok')
+
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('io.projectreactor:reactor-test')
+	testImplementation('org.springframework.cloud:spring-cloud-contract-wiremock')
+	testImplementation('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
+	testImplementation('org.springframework.cloud:spring-cloud-starter-contract-verifier')
+	testImplementation('org.springframework.cloud:spring-cloud-stream-test-support')
 }
 
 dependencyManagement {
