--- a/articulos/build.gradle
+++ b/articulos/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
 //	compile('org.springframework.cloud:spring-cloud-stream')
 //	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
-	compile('org.springframework.kafka:spring-kafka:2.1.8.RELEASE')
+	compile('org.springframework.kafka:spring-kafka')
 	runtime('org.postgresql:postgresql')
 	annotationProcessor('org.projectlombok:lombok')
 	implementation('org.projectlombok:lombok')
