--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -22,9 +22,8 @@ configurations {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-redis-reactive')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
-	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+	compile('org.springframework.boot:spring-boot-starter-webflux')
+	compile('org.springframework.cloud:spring-cloud-starter-gateway')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
