--- a/articulos/build.gradle
+++ b/articulos/build.gradle
@@ -11,30 +11,35 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.telopresto.service'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
+	compile('org.springframework.cloud:spring-cloud-starter-kubernetes')
 //	compile('org.springframework.boot:spring-boot-starter-data-redis-reactive')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.liquibase:liquibase-core')
-	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
+//	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
 //	compile('org.springframework.cloud:spring-cloud-stream')
 //	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
 	compile('org.springframework.kafka:spring-kafka')
+	compile('javax.validation:validation-api')
 	runtime('org.postgresql:postgresql')
-	annotationProcessor('org.projectlombok:lombok')
-	implementation('org.projectlombok:lombok')
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testImplementation 'io.rest-assured:xml-path:4.2.0'
 //	testCompile('io.projectreactor:reactor-test')
 	testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
 	testCompile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
 	testCompile('org.springframework.cloud:spring-cloud-starter-contract-verifier')
 //	testCompile('org.springframework.cloud:spring-cloud-stream-test-support')
 	testRuntime 'com.h2database:h2'
+	compile group: 'org.springframework.boot', name: 'spring-boot-properties-migrator', version: '2.3.0.RELEASE'
+
 }
 
 dependencyManagement {
@@ -42,3 +47,4 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+
