--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.2.1.RELEASE'
+        springBootVersion = '2.3.0.RELEASE'
     }
     repositories {
         maven { url "https://repo.spring.io/milestone" }
@@ -15,16 +15,21 @@ buildscript {
 
 plugins {
 	id 'io.franzbecker.gradle-lombok' version '2.1'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 }
+
 
 
 apply plugin: 'org.asciidoctor.convert'
 
+
 ext {
-	springCloudVersion = 'Hoxton.RC2'
+    set('springCloudVersion', "Hoxton.SR4")
 }
 
+
 allprojects {
+
 
     repositories {
         maven { url "https://repo.spring.io/milestone" }
