--- a/prestamos/build.gradle
+++ b/prestamos/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.telopresto.service'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -17,7 +17,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-redis-reactive')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('org.liquibase:liquibase-core')
-	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
+//	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
 	compile('org.springframework.cloud:spring-cloud-stream')
 	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
 	compile('org.springframework.kafka:spring-kafka')
