--- a/usuarios/build.gradle
+++ b/usuarios/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.telopresto.service'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -19,7 +19,7 @@ dependencies {
 //	compile('org.springframework.boot:spring-boot-starter-data-redis-reactive')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.liquibase:liquibase-core')
-	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
+//	compile('org.springframework.cloud:spring-cloud-starter-zookeeper-discovery')
 //	compile('org.springframework.cloud:spring-cloud-stream')
 //	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
 	compile('org.springframework.kafka:spring-kafka')
