--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.3.0.RELEASE'
+        springBootVersion = '2.4.0-M3'
     }
     repositories {
         maven { url "https://repo.spring.io/milestone" }
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.asciidoctor:asciidoctor-gradle-plugin:1.5.9.2")
+        classpath("org.asciidoctor:asciidoctor-gradle-plugin:1.6.1")
     }
 }
 
@@ -24,7 +24,7 @@ apply plugin: 'org.asciidoctor.convert'
 
 
 ext {
-    set('springCloudVersion', "Hoxton.SR4")
+    set('springCloudVersion', "2020.0.0-M3")
 }
 
 
